@@ -131,6 +131,17 @@
       </component>
     </version>
   </module>
+  <module name="beagle">
+    <version release="HEAD">
+      <component name="beagle" dir="beagle" group="extras">
+        <podir dir="po"/>
+        <potname name="beagle.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="beast">
     <version release="HEAD">
       <component name="beast" dir="beast" group="extras">
