@@ -1,5 +1,9 @@
 2005-04-04  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added beagle.
+
+2005-04-04  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: sound-juicer has been branched.
 
 2005-04-04  Adam Weinberger  <adamw@gnome.org>
